# CVAGENT

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.ps1  start.bat  start_desktop.bat
.streamlit/: config.toml
apps/desktop/: README.md  desktop_app.py
apps/web/: README.md  app.py
ops/: README.md
ops/debug/: README.md  debug_record_template.md
ops/testing/: README.md  test_run_template.md
ops/updates/: README.md  update_record_template.md
sample_data/: fake_jd_agent_engineer.md  fake_resume_agent_dev.md
scripts/: build_desktop.ps1
src/: __init__.py  config.py  deepseek_client.py  i18n.py  local_store.py  release_notes.py  schemas.py  security.py  storage.py  web_app.py
src/agents/: __init__.py  bullet_generator.py  evidence_matcher.py  exporter.py  fact_extractor.py  jd_analyzer.py  llm_workflow.py  question_planner.py  resume_parser.py  risk_auditor.py
src/prompts/: bullet_generator.md  evidence_matcher.md  fact_extractor.md  jd_analyzer.md  question_planner.md  resume_parser.md  risk_auditor.md
src/ui/: components.py  evidence_page.py  export_page.py  guide.py  history_page.py  interview_page.py  jd_page.py  matrix_page.py  resume_page.py  rewrite_page.py  settings_page.py  state.py  style.py
src/utils/: diff_utils.py  file_loader.py  token_logger.py
tests/: test_fact_id_required.py  test_gap_placeholder.py  test_i18n.py  test_json_schema.py  test_local_store.py  test_no_fake_metrics.py  test_role_inflation.py  test_security_redaction.py
